--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ material3 = "1.0.0-alpha12"
 foundation = "1.9.4"
 foundationLayout = "1.9.4"
 animation = "1.9.4"
+windowManagerCore = "1.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,7 @@ material3 = { group = "androidx.xr.compose.material3", name = "material3", versi
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 androidx-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayout" }
 androidx-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
+androidx-window-core = { group = "androidx.window", name = "window-core", version.ref = "windowManagerCore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
